server/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> list
Rule 2     start -> dict
Rule 3     start -> listcontents
Rule 4     start -> dictcontents
Rule 5     list -> LBRACE listcontents RBRACE
Rule 6     listcontents -> listcontents list
Rule 7     listcontents -> listcontents dict
Rule 8     listcontents -> listcontents atom
Rule 9     listcontents -> list
Rule 10    listcontents -> dict
Rule 11    listcontents -> atom
Rule 12    listcontents -> empty
Rule 13    empty -> <empty>
Rule 14    dict -> LBRACE dictcontents RBRACE
Rule 15    dictcontents -> dictcontents atom EQUAL list
Rule 16    dictcontents -> dictcontents atom EQUAL dict
Rule 17    dictcontents -> dictcontents atom EQUAL atom
Rule 18    dictcontents -> dictcontents EQUAL EQUAL list
Rule 19    dictcontents -> dictcontents EQUAL EQUAL dict
Rule 20    dictcontents -> dictcontents EQUAL EQUAL atom
Rule 21    dictcontents -> atom EQUAL list
Rule 22    dictcontents -> atom EQUAL dict
Rule 23    dictcontents -> atom EQUAL atom
Rule 24    dictcontents -> empty
Rule 25    atom -> IDEN
Rule 26    atom -> STR
Rule 27    atom -> NUM
Rule 28    atom -> MINUS NUM

Terminals, with rules where they appear

EQUAL                : 15 16 17 18 18 19 19 20 20 21 22 23
IDEN                 : 25
LBRACE               : 5 14
MINUS                : 28
NUM                  : 27 28
RBRACE               : 5 14
STR                  : 26
error                : 

Nonterminals, with rules where they appear

atom                 : 8 11 15 16 17 17 20 21 22 23 23
dict                 : 2 7 10 16 19 22
dictcontents         : 4 14 15 16 17 18 19 20
empty                : 12 24
list                 : 1 6 9 15 18 21
listcontents         : 3 5 6 7 8
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . list
    (2) start -> . dict
    (3) start -> . listcontents
    (4) start -> . dictcontents
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (6) listcontents -> . listcontents list
    (7) listcontents -> . listcontents dict
    (8) listcontents -> . listcontents atom
    (9) listcontents -> . list
    (10) listcontents -> . dict
    (11) listcontents -> . atom
    (12) listcontents -> . empty
    (15) dictcontents -> . dictcontents atom EQUAL list
    (16) dictcontents -> . dictcontents atom EQUAL dict
    (17) dictcontents -> . dictcontents atom EQUAL atom
    (18) dictcontents -> . dictcontents EQUAL EQUAL list
    (19) dictcontents -> . dictcontents EQUAL EQUAL dict
    (20) dictcontents -> . dictcontents EQUAL EQUAL atom
    (21) dictcontents -> . atom EQUAL list
    (22) dictcontents -> . atom EQUAL dict
    (23) dictcontents -> . atom EQUAL atom
    (24) dictcontents -> . empty
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM
    (13) empty -> .

  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for IDEN resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8
    $end            reduce using rule 13 (empty -> .)
    EQUAL           reduce using rule 13 (empty -> .)

  ! LBRACE          [ reduce using rule 13 (empty -> .) ]
  ! IDEN            [ reduce using rule 13 (empty -> .) ]
  ! STR             [ reduce using rule 13 (empty -> .) ]
  ! NUM             [ reduce using rule 13 (empty -> .) ]
  ! MINUS           [ reduce using rule 13 (empty -> .) ]

    start                          shift and go to state 1
    dict                           shift and go to state 3
    atom                           shift and go to state 4
    dictcontents                   shift and go to state 10
    empty                          shift and go to state 9
    list                           shift and go to state 6
    listcontents                   shift and go to state 11

state 1

    (0) S' -> start .



state 2

    (5) list -> LBRACE . listcontents RBRACE
    (14) dict -> LBRACE . dictcontents RBRACE
    (6) listcontents -> . listcontents list
    (7) listcontents -> . listcontents dict
    (8) listcontents -> . listcontents atom
    (9) listcontents -> . list
    (10) listcontents -> . dict
    (11) listcontents -> . atom
    (12) listcontents -> . empty
    (15) dictcontents -> . dictcontents atom EQUAL list
    (16) dictcontents -> . dictcontents atom EQUAL dict
    (17) dictcontents -> . dictcontents atom EQUAL atom
    (18) dictcontents -> . dictcontents EQUAL EQUAL list
    (19) dictcontents -> . dictcontents EQUAL EQUAL dict
    (20) dictcontents -> . dictcontents EQUAL EQUAL atom
    (21) dictcontents -> . atom EQUAL list
    (22) dictcontents -> . atom EQUAL dict
    (23) dictcontents -> . atom EQUAL atom
    (24) dictcontents -> . empty
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM
    (13) empty -> .

  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for IDEN resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8
    RBRACE          reduce using rule 13 (empty -> .)
    EQUAL           reduce using rule 13 (empty -> .)

  ! LBRACE          [ reduce using rule 13 (empty -> .) ]
  ! IDEN            [ reduce using rule 13 (empty -> .) ]
  ! STR             [ reduce using rule 13 (empty -> .) ]
  ! NUM             [ reduce using rule 13 (empty -> .) ]
  ! MINUS           [ reduce using rule 13 (empty -> .) ]

    dict                           shift and go to state 13
    atom                           shift and go to state 4
    dictcontents                   shift and go to state 15
    empty                          shift and go to state 9
    list                           shift and go to state 14
    listcontents                   shift and go to state 16

state 3

    (2) start -> dict .
    (10) listcontents -> dict .

  ! reduce/reduce conflict for $end resolved using rule 2 (start -> dict .)
    $end            reduce using rule 2 (start -> dict .)
    LBRACE          reduce using rule 10 (listcontents -> dict .)
    IDEN            reduce using rule 10 (listcontents -> dict .)
    STR             reduce using rule 10 (listcontents -> dict .)
    NUM             reduce using rule 10 (listcontents -> dict .)
    MINUS           reduce using rule 10 (listcontents -> dict .)

  ! $end            [ reduce using rule 10 (listcontents -> dict .) ]


state 4

    (11) listcontents -> atom .
    (21) dictcontents -> atom . EQUAL list
    (22) dictcontents -> atom . EQUAL dict
    (23) dictcontents -> atom . EQUAL atom

    LBRACE          reduce using rule 11 (listcontents -> atom .)
    IDEN            reduce using rule 11 (listcontents -> atom .)
    STR             reduce using rule 11 (listcontents -> atom .)
    NUM             reduce using rule 11 (listcontents -> atom .)
    MINUS           reduce using rule 11 (listcontents -> atom .)
    $end            reduce using rule 11 (listcontents -> atom .)
    RBRACE          reduce using rule 11 (listcontents -> atom .)
    EQUAL           shift and go to state 17


state 5

    (26) atom -> STR .

    EQUAL           reduce using rule 26 (atom -> STR .)
    RBRACE          reduce using rule 26 (atom -> STR .)
    LBRACE          reduce using rule 26 (atom -> STR .)
    IDEN            reduce using rule 26 (atom -> STR .)
    STR             reduce using rule 26 (atom -> STR .)
    NUM             reduce using rule 26 (atom -> STR .)
    MINUS           reduce using rule 26 (atom -> STR .)
    $end            reduce using rule 26 (atom -> STR .)


state 6

    (1) start -> list .
    (9) listcontents -> list .

  ! reduce/reduce conflict for $end resolved using rule 1 (start -> list .)
    $end            reduce using rule 1 (start -> list .)
    LBRACE          reduce using rule 9 (listcontents -> list .)
    IDEN            reduce using rule 9 (listcontents -> list .)
    STR             reduce using rule 9 (listcontents -> list .)
    NUM             reduce using rule 9 (listcontents -> list .)
    MINUS           reduce using rule 9 (listcontents -> list .)

  ! $end            [ reduce using rule 9 (listcontents -> list .) ]


state 7

    (25) atom -> IDEN .

    EQUAL           reduce using rule 25 (atom -> IDEN .)
    RBRACE          reduce using rule 25 (atom -> IDEN .)
    LBRACE          reduce using rule 25 (atom -> IDEN .)
    IDEN            reduce using rule 25 (atom -> IDEN .)
    STR             reduce using rule 25 (atom -> IDEN .)
    NUM             reduce using rule 25 (atom -> IDEN .)
    MINUS           reduce using rule 25 (atom -> IDEN .)
    $end            reduce using rule 25 (atom -> IDEN .)


state 8

    (28) atom -> MINUS . NUM

    NUM             shift and go to state 18


state 9

    (12) listcontents -> empty .
    (24) dictcontents -> empty .

  ! reduce/reduce conflict for IDEN resolved using rule 12 (listcontents -> empty .)
  ! reduce/reduce conflict for STR resolved using rule 12 (listcontents -> empty .)
  ! reduce/reduce conflict for NUM resolved using rule 12 (listcontents -> empty .)
  ! reduce/reduce conflict for MINUS resolved using rule 12 (listcontents -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 12 (listcontents -> empty .)
  ! reduce/reduce conflict for RBRACE resolved using rule 12 (listcontents -> empty .)
    LBRACE          reduce using rule 12 (listcontents -> empty .)
    IDEN            reduce using rule 12 (listcontents -> empty .)
    STR             reduce using rule 12 (listcontents -> empty .)
    NUM             reduce using rule 12 (listcontents -> empty .)
    MINUS           reduce using rule 12 (listcontents -> empty .)
    $end            reduce using rule 12 (listcontents -> empty .)
    RBRACE          reduce using rule 12 (listcontents -> empty .)
    EQUAL           reduce using rule 24 (dictcontents -> empty .)

  ! IDEN            [ reduce using rule 24 (dictcontents -> empty .) ]
  ! STR             [ reduce using rule 24 (dictcontents -> empty .) ]
  ! NUM             [ reduce using rule 24 (dictcontents -> empty .) ]
  ! MINUS           [ reduce using rule 24 (dictcontents -> empty .) ]
  ! $end            [ reduce using rule 24 (dictcontents -> empty .) ]
  ! RBRACE          [ reduce using rule 24 (dictcontents -> empty .) ]


state 10

    (4) start -> dictcontents .
    (15) dictcontents -> dictcontents . atom EQUAL list
    (16) dictcontents -> dictcontents . atom EQUAL dict
    (17) dictcontents -> dictcontents . atom EQUAL atom
    (18) dictcontents -> dictcontents . EQUAL EQUAL list
    (19) dictcontents -> dictcontents . EQUAL EQUAL dict
    (20) dictcontents -> dictcontents . EQUAL EQUAL atom
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    $end            reduce using rule 4 (start -> dictcontents .)
    EQUAL           shift and go to state 19
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    atom                           shift and go to state 20

state 11

    (3) start -> listcontents .
    (6) listcontents -> listcontents . list
    (7) listcontents -> listcontents . dict
    (8) listcontents -> listcontents . atom
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    $end            reduce using rule 3 (start -> listcontents .)
    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    list                           shift and go to state 23
    atom                           shift and go to state 22
    dict                           shift and go to state 21

state 12

    (27) atom -> NUM .

    EQUAL           reduce using rule 27 (atom -> NUM .)
    RBRACE          reduce using rule 27 (atom -> NUM .)
    LBRACE          reduce using rule 27 (atom -> NUM .)
    IDEN            reduce using rule 27 (atom -> NUM .)
    STR             reduce using rule 27 (atom -> NUM .)
    NUM             reduce using rule 27 (atom -> NUM .)
    MINUS           reduce using rule 27 (atom -> NUM .)
    $end            reduce using rule 27 (atom -> NUM .)


state 13

    (10) listcontents -> dict .

    RBRACE          reduce using rule 10 (listcontents -> dict .)
    LBRACE          reduce using rule 10 (listcontents -> dict .)
    IDEN            reduce using rule 10 (listcontents -> dict .)
    STR             reduce using rule 10 (listcontents -> dict .)
    NUM             reduce using rule 10 (listcontents -> dict .)
    MINUS           reduce using rule 10 (listcontents -> dict .)


state 14

    (9) listcontents -> list .

    RBRACE          reduce using rule 9 (listcontents -> list .)
    LBRACE          reduce using rule 9 (listcontents -> list .)
    IDEN            reduce using rule 9 (listcontents -> list .)
    STR             reduce using rule 9 (listcontents -> list .)
    NUM             reduce using rule 9 (listcontents -> list .)
    MINUS           reduce using rule 9 (listcontents -> list .)


state 15

    (14) dict -> LBRACE dictcontents . RBRACE
    (15) dictcontents -> dictcontents . atom EQUAL list
    (16) dictcontents -> dictcontents . atom EQUAL dict
    (17) dictcontents -> dictcontents . atom EQUAL atom
    (18) dictcontents -> dictcontents . EQUAL EQUAL list
    (19) dictcontents -> dictcontents . EQUAL EQUAL dict
    (20) dictcontents -> dictcontents . EQUAL EQUAL atom
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    RBRACE          shift and go to state 24
    EQUAL           shift and go to state 19
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    atom                           shift and go to state 20

state 16

    (5) list -> LBRACE listcontents . RBRACE
    (6) listcontents -> listcontents . list
    (7) listcontents -> listcontents . dict
    (8) listcontents -> listcontents . atom
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    RBRACE          shift and go to state 25
    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    list                           shift and go to state 23
    atom                           shift and go to state 22
    dict                           shift and go to state 21

state 17

    (21) dictcontents -> atom EQUAL . list
    (22) dictcontents -> atom EQUAL . dict
    (23) dictcontents -> atom EQUAL . atom
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    list                           shift and go to state 28
    atom                           shift and go to state 27
    dict                           shift and go to state 26

state 18

    (28) atom -> MINUS NUM .

    EQUAL           reduce using rule 28 (atom -> MINUS NUM .)
    RBRACE          reduce using rule 28 (atom -> MINUS NUM .)
    LBRACE          reduce using rule 28 (atom -> MINUS NUM .)
    IDEN            reduce using rule 28 (atom -> MINUS NUM .)
    STR             reduce using rule 28 (atom -> MINUS NUM .)
    NUM             reduce using rule 28 (atom -> MINUS NUM .)
    MINUS           reduce using rule 28 (atom -> MINUS NUM .)
    $end            reduce using rule 28 (atom -> MINUS NUM .)


state 19

    (18) dictcontents -> dictcontents EQUAL . EQUAL list
    (19) dictcontents -> dictcontents EQUAL . EQUAL dict
    (20) dictcontents -> dictcontents EQUAL . EQUAL atom

    EQUAL           shift and go to state 29


state 20

    (15) dictcontents -> dictcontents atom . EQUAL list
    (16) dictcontents -> dictcontents atom . EQUAL dict
    (17) dictcontents -> dictcontents atom . EQUAL atom

    EQUAL           shift and go to state 30


state 21

    (7) listcontents -> listcontents dict .

    LBRACE          reduce using rule 7 (listcontents -> listcontents dict .)
    IDEN            reduce using rule 7 (listcontents -> listcontents dict .)
    STR             reduce using rule 7 (listcontents -> listcontents dict .)
    NUM             reduce using rule 7 (listcontents -> listcontents dict .)
    MINUS           reduce using rule 7 (listcontents -> listcontents dict .)
    $end            reduce using rule 7 (listcontents -> listcontents dict .)
    RBRACE          reduce using rule 7 (listcontents -> listcontents dict .)


state 22

    (8) listcontents -> listcontents atom .

    LBRACE          reduce using rule 8 (listcontents -> listcontents atom .)
    IDEN            reduce using rule 8 (listcontents -> listcontents atom .)
    STR             reduce using rule 8 (listcontents -> listcontents atom .)
    NUM             reduce using rule 8 (listcontents -> listcontents atom .)
    MINUS           reduce using rule 8 (listcontents -> listcontents atom .)
    $end            reduce using rule 8 (listcontents -> listcontents atom .)
    RBRACE          reduce using rule 8 (listcontents -> listcontents atom .)


state 23

    (6) listcontents -> listcontents list .

    LBRACE          reduce using rule 6 (listcontents -> listcontents list .)
    IDEN            reduce using rule 6 (listcontents -> listcontents list .)
    STR             reduce using rule 6 (listcontents -> listcontents list .)
    NUM             reduce using rule 6 (listcontents -> listcontents list .)
    MINUS           reduce using rule 6 (listcontents -> listcontents list .)
    $end            reduce using rule 6 (listcontents -> listcontents list .)
    RBRACE          reduce using rule 6 (listcontents -> listcontents list .)


state 24

    (14) dict -> LBRACE dictcontents RBRACE .

    EQUAL           reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    IDEN            reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    STR             reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    NUM             reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    MINUS           reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    $end            reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    RBRACE          reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)
    LBRACE          reduce using rule 14 (dict -> LBRACE dictcontents RBRACE .)


state 25

    (5) list -> LBRACE listcontents RBRACE .

    EQUAL           reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    IDEN            reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    STR             reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    NUM             reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    MINUS           reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    $end            reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    RBRACE          reduce using rule 5 (list -> LBRACE listcontents RBRACE .)
    LBRACE          reduce using rule 5 (list -> LBRACE listcontents RBRACE .)


state 26

    (22) dictcontents -> atom EQUAL dict .

    EQUAL           reduce using rule 22 (dictcontents -> atom EQUAL dict .)
    IDEN            reduce using rule 22 (dictcontents -> atom EQUAL dict .)
    STR             reduce using rule 22 (dictcontents -> atom EQUAL dict .)
    NUM             reduce using rule 22 (dictcontents -> atom EQUAL dict .)
    MINUS           reduce using rule 22 (dictcontents -> atom EQUAL dict .)
    $end            reduce using rule 22 (dictcontents -> atom EQUAL dict .)
    RBRACE          reduce using rule 22 (dictcontents -> atom EQUAL dict .)


state 27

    (23) dictcontents -> atom EQUAL atom .

    EQUAL           reduce using rule 23 (dictcontents -> atom EQUAL atom .)
    IDEN            reduce using rule 23 (dictcontents -> atom EQUAL atom .)
    STR             reduce using rule 23 (dictcontents -> atom EQUAL atom .)
    NUM             reduce using rule 23 (dictcontents -> atom EQUAL atom .)
    MINUS           reduce using rule 23 (dictcontents -> atom EQUAL atom .)
    $end            reduce using rule 23 (dictcontents -> atom EQUAL atom .)
    RBRACE          reduce using rule 23 (dictcontents -> atom EQUAL atom .)


state 28

    (21) dictcontents -> atom EQUAL list .

    EQUAL           reduce using rule 21 (dictcontents -> atom EQUAL list .)
    IDEN            reduce using rule 21 (dictcontents -> atom EQUAL list .)
    STR             reduce using rule 21 (dictcontents -> atom EQUAL list .)
    NUM             reduce using rule 21 (dictcontents -> atom EQUAL list .)
    MINUS           reduce using rule 21 (dictcontents -> atom EQUAL list .)
    $end            reduce using rule 21 (dictcontents -> atom EQUAL list .)
    RBRACE          reduce using rule 21 (dictcontents -> atom EQUAL list .)


state 29

    (18) dictcontents -> dictcontents EQUAL EQUAL . list
    (19) dictcontents -> dictcontents EQUAL EQUAL . dict
    (20) dictcontents -> dictcontents EQUAL EQUAL . atom
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    list                           shift and go to state 33
    atom                           shift and go to state 32
    dict                           shift and go to state 31

state 30

    (15) dictcontents -> dictcontents atom EQUAL . list
    (16) dictcontents -> dictcontents atom EQUAL . dict
    (17) dictcontents -> dictcontents atom EQUAL . atom
    (5) list -> . LBRACE listcontents RBRACE
    (14) dict -> . LBRACE dictcontents RBRACE
    (25) atom -> . IDEN
    (26) atom -> . STR
    (27) atom -> . NUM
    (28) atom -> . MINUS NUM

    LBRACE          shift and go to state 2
    IDEN            shift and go to state 7
    STR             shift and go to state 5
    NUM             shift and go to state 12
    MINUS           shift and go to state 8

    list                           shift and go to state 36
    atom                           shift and go to state 35
    dict                           shift and go to state 34

state 31

    (19) dictcontents -> dictcontents EQUAL EQUAL dict .

    EQUAL           reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)
    IDEN            reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)
    STR             reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)
    NUM             reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)
    MINUS           reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)
    $end            reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)
    RBRACE          reduce using rule 19 (dictcontents -> dictcontents EQUAL EQUAL dict .)


state 32

    (20) dictcontents -> dictcontents EQUAL EQUAL atom .

    EQUAL           reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)
    IDEN            reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)
    STR             reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)
    NUM             reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)
    MINUS           reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)
    $end            reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)
    RBRACE          reduce using rule 20 (dictcontents -> dictcontents EQUAL EQUAL atom .)


state 33

    (18) dictcontents -> dictcontents EQUAL EQUAL list .

    EQUAL           reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)
    IDEN            reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)
    STR             reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)
    NUM             reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)
    MINUS           reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)
    $end            reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)
    RBRACE          reduce using rule 18 (dictcontents -> dictcontents EQUAL EQUAL list .)


state 34

    (16) dictcontents -> dictcontents atom EQUAL dict .

    EQUAL           reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)
    IDEN            reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)
    STR             reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)
    NUM             reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)
    MINUS           reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)
    $end            reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)
    RBRACE          reduce using rule 16 (dictcontents -> dictcontents atom EQUAL dict .)


state 35

    (17) dictcontents -> dictcontents atom EQUAL atom .

    EQUAL           reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)
    IDEN            reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)
    STR             reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)
    NUM             reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)
    MINUS           reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)
    $end            reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)
    RBRACE          reduce using rule 17 (dictcontents -> dictcontents atom EQUAL atom .)


state 36

    (15) dictcontents -> dictcontents atom EQUAL list .

    EQUAL           reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)
    IDEN            reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)
    STR             reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)
    NUM             reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)
    MINUS           reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)
    $end            reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)
    RBRACE          reduce using rule 15 (dictcontents -> dictcontents atom EQUAL list .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for LBRACE in state 0 resolved as shift
WARNING: shift/reduce conflict for IDEN in state 0 resolved as shift
WARNING: shift/reduce conflict for STR in state 0 resolved as shift
WARNING: shift/reduce conflict for NUM in state 0 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 0 resolved as shift
WARNING: shift/reduce conflict for LBRACE in state 2 resolved as shift
WARNING: shift/reduce conflict for IDEN in state 2 resolved as shift
WARNING: shift/reduce conflict for STR in state 2 resolved as shift
WARNING: shift/reduce conflict for NUM in state 2 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 2 resolved as shift
WARNING: reduce/reduce conflict in state 3 resolved using rule (start -> dict)
WARNING: rejected rule (listcontents -> dict) in state 3
WARNING: reduce/reduce conflict in state 6 resolved using rule (start -> list)
WARNING: rejected rule (listcontents -> list) in state 6
WARNING: reduce/reduce conflict in state 9 resolved using rule (listcontents -> empty)
WARNING: rejected rule (dictcontents -> empty) in state 9
